Pointed App.js to api.wuzy.com
app.js -- Pointed App.js to api.wuzy.com (PLEASE DO NOT CHANGE THIS AGAIN)

templates/layout.hdbs -- Changed title of app to Wuzy

translations/en.json -- Changed loading method so it does not interfere with other apps (debug purposes)

--- a/translations/en.json
+++ b/translations/en.json
@@ -11,10 +11,10 @@
       "title"     : "An error occurred",
       "message"   : "Please try the previous action again."
     },
-    "loading"     : "Initialising app...",
+    "loading"     : "Loading Wuzy Application...",
     "no_results"  : "No results found."
   },
-  
+
   "ticket": {
     "id"      : "ID",
     "subject" : "SUBJECT"
